# VANGUARD-CLEF2026-EXIST

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml  requitements.txt
runnable/: README.md  augment.py  evaluate.py  preprocess.py  train.py  train_task_1.py
src/exist_2026/: path_manager.py
src/exist_2026/analysis/: compare_missing.py  data_analysis.py  sensor_data_analysis.py
src/exist_2026/consts/: sensor_values.py  task_config.py
src/exist_2026/dataset/: augument_data.py  data_loader.py  extract_labels.py
src/exist_2026/evaluate/: aggregate_ablations.py  eval.py  eval_multitask.py  eval_utils.py  pyevall_eval.py  run_trained_on_val_all_langs.py  run_trained_on_val_set.py
src/exist_2026/preprocess/: combine_ocr_results.py  extract_ocr.py  extract_ocr_missing.py  preprocessing.py
src/exist_2026/train/: ensemble_pipeline.py  helpers.py  train_ablations.py  train_multitask.py  train_multitask_ensemble.py  train_single_task.py  train_steps.py  train_t1.py
src/exist_2026/train/nn/: determinism.py  early_stop.py  losses.py  meme_classifier.py  meme_classifier_ablation.py
src/exist_2026/visualization/: plot_data.py  plot_random_samples.py  plot_training.py
